@@ -1,6 +1,7 @@
 June 2018 6.4
   - Imagick PHP extension required
   - Passwords can be checked against external service (e.g. https://api.pwnedpasswords.com/range)
+  - Personal/Windows: image cropping support
   - IMAP: create mailbox via file upload
   - PHP 7.2 support
   - LAM Pro:
